<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onlineMiniaturesFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/favouritesFragment"
        android:name="ch.epfl.polychef.fragments.FavouritesFragment"
        android:label="fragment_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_favouritesFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/rateRecipeFragment"
        android:name="ch.epfl.polychef.fragments.RateRecipeFragment"
        android:label="fragment_rate_recipe"
        tools:layout="@layout/fragment_rate_recipe" >
        <action
            android:id="@+id/action_RateRecipeFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_RateRecipeFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_RateRecipeFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_RateRecipeFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_RateRecipeFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/fullRecipeFragment"
        android:name="ch.epfl.polychef.fragments.FullRecipeFragment"
        android:label="FullRecipeFragment" >
        <action
            android:id="@+id/action_fullRecipeFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_fullRecipeFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_fullRecipeFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_fullRecipeFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_fullRecipeFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_fullRecipeFragment_to_rateRecipeFragment"
            app:destination="@id/rateRecipeFragment" />
        <action
            android:id="@+id/action_fullRecipeFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment"/>
    </fragment>

    <fragment
        android:id="@+id/postRecipeFragment"
        android:name="ch.epfl.polychef.fragments.PostRecipeFragment"
        android:label="fragment_post_recipe"
        tools:layout="@layout/fragment_post_recipe" >
        <action
            android:id="@+id/action_postRecipeFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_postRecipeFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_postRecipeFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_postRecipeFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_postRecipeFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/subscribersFragment"
        android:name="ch.epfl.polychef.fragments.SubscribersFragment"
        android:label="fragment_subscribers"
        tools:layout="@layout/fragment_subscribers" >
        <action
            android:id="@+id/action_subscribersFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_subscribersFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_subscribersFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_subscribersFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_subscribersFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/subscriptionsFragment"
        android:name="ch.epfl.polychef.fragments.SubscriptionsFragment"
        android:label="fragment_subscriptions"
        tools:layout="@layout/fragment_subscriptions" >
        <action
            android:id="@+id/action_subscriptionsFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_subscriptionsFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_subscriptionsFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_subscriptionsFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_subscriptionsFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/onlineMiniaturesFragment"
        android:name="ch.epfl.polychef.fragments.OnlineMiniaturesFragment"
        android:label="fragment_miniatures_online"
        tools:layout="@layout/fragment_miniatures_online" >
        <action
            android:id="@+id/action_onlineMiniaturesFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_onlineMiniaturesFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_onlineMiniaturesFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_onlineMiniaturesFragment_to_fullRecipeFragment"
            app:destination="@id/fullRecipeFragment" />
        <action
            android:id="@+id/action_onlineMiniaturesFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_onlineMiniaturesFragment_to_fullUsersFragment"
            app:destination="@id/rateRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="ch.epfl.polychef.fragments.UserProfileFragment"
        android:label="fragment_full_users"
        tools:layout="@layout/fragment_user_profile" >
        <action
            android:id="@+id/action_fullUsersFragment_self"
            app:destination="@id/userProfileFragment" />
        <action
            android:id="@+id/action_fullUsersFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_fullUsersFragment_to_subscriptionsFragment"
            app:destination="@id/subscriptionsFragment" />
        <action
            android:id="@+id/action_fullUsersFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_fullUsersFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_fullUsersFragment_to_postRecipeFragment"
            app:destination="@id/postRecipeFragment" />
        <action
            android:id="@+id/action_fullUsersFragment_to_fullRecipeFragment"
            app:destination="@id/fullRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/userProfilePictureChoice"
        android:name="ch.epfl.polychef.fragments.ProfilePictChoice"
        android:label="profile_picture_choice"
        tools:layout="@layout/profile_pict_choice" >
    </fragment>

</navigation>
