...
    android:paddingTop="@dimen/drawer_vertical_margin"
    android:paddingRight="@dimen/drawer_horizontal_margin"
    android:paddingBottom="@dimen/drawer_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <include
        android:id="@+id/drawerProfileImage"
        layout="@layout/profile_picture_layout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/nightModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/drawerProfileImage"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dark_theme" />

...
